edited feature validation, created validation set

--- a/model_builder.ipynb
+++ b/model_builder.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,13 +24,12 @@
     "\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.linear_model import LogisticRegression"
+    "from sklearn.linear_model import LinearRegression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,51 +163,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "labels = normalised_df[['target_in_site_stdevs']]\n",
+    "labels = train_data[['target']]\n",
     "\n",
-    "all_feature_names = list(normalised_df.columns[0:280])\n",
-    "all_features = normalised_df[all_feature_names]"
+    "all_feature_names = list(train_data.columns[0:280])\n",
+    "all_features = train_data[all_feature_names]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tree_model = DecisionTreeRegressor(max_depth=100).fit(all_features, labels)"
+    "tree_model = DecisionTreeRegressor(max_depth=20).fit(all_features, labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature_importances = tree_model.feature_importances_\n",
+    "def get_features(tree):\n",
+    "    feature_importances = tree.feature_importances_\n",
     "\n",
-    "imp_threshold = 0.0001\n",
-    "selected_names = []\n",
+    "    imp_threshold = 0.01\n",
+    "    selected_names = []\n",
+    "    values = []\n",
     "\n",
-    "idx = 0\n",
-    "for imp_value in feature_importances:\n",
-    "    if imp_value >= imp_threshold:\n",
-    "        selected_names.append(all_features.columns[idx])\n",
-    "    idx += 1"
+    "    idx = 0\n",
+    "    for imp_value in feature_importances:\n",
+    "        if imp_value >= imp_threshold:\n",
+    "            selected_names.append(all_features.columns[idx])\n",
+    "            values.append(imp_value)\n",
+    "        idx += 1\n",
+    "    \n",
+    "\n",
+    "    return pd.Series(values, index=selected_names)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8281481689918144\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "links_1d             0.014003\n",
+       "base_comments        0.015458\n",
+       "comments_diff_avg    0.018061\n",
+       "comments_firstDay    0.021273\n",
+       "comments_diff        0.028433\n",
+       "post_length          0.042299\n",
+       "comments_1d          0.123592\n",
+       "time_since_posted    0.228554\n",
+       "comments_2d_stdev    0.243899\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "selected_features = normalised_df[selected_names]\n"
+    "\n",
+    "selected_names = get_features(tree_model).index\n",
+    "selected_features = train_data[selected_names]\n",
+    "tree_model2 = DecisionTreeRegressor(max_depth=10).fit(selected_features, labels)\n",
+    "\n",
+    "print(tree_model2.score(selected_features, labels))\n",
+    "\n",
+    "get_features(tree_model).sort_values()\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -220,19 +261,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-5 {color: black;}#sk-container-id-5 pre{padding: 0;}#sk-container-id-5 div.sk-toggleable {background-color: white;}#sk-container-id-5 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-5 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-5 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-5 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-5 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-5 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-5 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-5 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-5 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-5 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-5 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-5 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-5 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-5 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-5 div.sk-item {position: relative;z-index: 1;}#sk-container-id-5 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-5 div.sk-item::before, #sk-container-id-5 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-5 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-5 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-5 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-5 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-5 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-5 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-5 div.sk-label-container {text-align: center;}#sk-container-id-5 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-5 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-5\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LinearRegression(fit_intercept=False)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-5\" type=\"checkbox\" checked><label for=\"sk-estimator-id-5\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LinearRegression</label><div class=\"sk-toggleable__content\"><pre>LinearRegression(fit_intercept=False)</pre></div></div></div></div></div>"
+       "<style>#sk-container-id-6 {color: black;}#sk-container-id-6 pre{padding: 0;}#sk-container-id-6 div.sk-toggleable {background-color: white;}#sk-container-id-6 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-6 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-6 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-6 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-6 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-6 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-6 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-6 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-6 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-6 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-6 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-6 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-6 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-6 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-6 div.sk-item {position: relative;z-index: 1;}#sk-container-id-6 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-6 div.sk-item::before, #sk-container-id-6 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-6 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-6 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-6 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-6 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-6 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-6 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-6 div.sk-label-container {text-align: center;}#sk-container-id-6 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-6 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-6\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LinearRegression(fit_intercept=False)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-6\" type=\"checkbox\" checked><label for=\"sk-estimator-id-6\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LinearRegression</label><div class=\"sk-toggleable__content\"><pre>LinearRegression(fit_intercept=False)</pre></div></div></div></div></div>"
       ],
       "text/plain": [
        "LinearRegression(fit_intercept=False)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,66 +291,7 @@
     {
      "data": {
       "text/plain": [
-       "[0.14489533801176524,\n",
-       " -0.21981286005189937,\n",
-       " 0.06096158790265349,\n",
-       " -0.13869174003220097,\n",
-       " -0.012397359323764734,\n",
-       " -0.02694332469849936,\n",
-       " -0.022003685350096447,\n",
-       " 0.026643228796562002,\n",
-       " 0.06864840667470562,\n",
-       " 0.0548814227469282,\n",
-       " -0.22952689859765796,\n",
-       " 0.12672787124937113,\n",
-       " -0.04261238183584792,\n",
-       " 0.11727289275139008,\n",
-       " 0.170224335905377,\n",
-       " -0.11494777839264891,\n",
-       " -0.029585457489375244,\n",
-       " -0.02987092106621181,\n",
-       " 0.14678308175102717,\n",
-       " 0.02545689012025365,\n",
-       " -0.28577523985720754,\n",
-       " -0.007672961032793024,\n",
-       " 0.14589010030103733,\n",
-       " 0.045223501749205086,\n",
-       " 0.009443466450714366,\n",
-       " 0.04901977732749607,\n",
-       " 0.0874022061144979,\n",
-       " 0.20816499420943568,\n",
-       " -0.10180705342716379,\n",
-       " -0.1900787358445275,\n",
-       " 0.07726232786996101,\n",
-       " 0.05156246316645119,\n",
-       " 0.06250462829181402,\n",
-       " 0.08008374610855573,\n",
-       " 0.24703026699099406,\n",
-       " 0.07772116561526854,\n",
-       " 0.15152977161315573,\n",
-       " 0.16213042536856204,\n",
-       " -0.19339250056029478,\n",
-       " -0.011289243444313257,\n",
-       " -0.1853119475158247,\n",
-       " -0.4317446992555849,\n",
-       " -0.005488947690429624,\n",
-       " -0.12984625265181338,\n",
-       " 0.009696351866591457,\n",
-       " -0.07601701652784598,\n",
-       " 0.18035836996118204,\n",
-       " -0.026922794816001128,\n",
-       " 0.08201020068031595,\n",
-       " 0.11111812023680867,\n",
-       " -0.3106757909327502,\n",
-       " 0.11500788164660003,\n",
-       " 0.06907508294685205,\n",
-       " 0.002301733027592734,\n",
-       " -0.02557791883038152,\n",
-       " -0.08302092011070439,\n",
-       " -0.2757213659199431,\n",
-       " -5.6113988724737496e-05,\n",
-       " -0.1745539807718981,\n",
-       " -0.034002778163066294]"
+       "0.16854412014007922"
       ]
      },
      "execution_count": 76,
@@ -320,16 +302,18 @@
    "source": [
     "scores = []\n",
     "\n",
-    "for _set in test_sets:\n",
-    "    _set = find_target_stats(_set)\n",
-    "    normalised_set = normalise_features(features_to_normalise, _set)\n",
+    "val_sets = test_sets[:len(test_sets)//2]\n",
+    "\n",
+    "for _set in val_sets:\n",
+    "    # _set = find_target_stats(_set)\n",
+    "    # normalised_set = normalise_features(features_to_normalise, _set)\n",
     "    \n",
-    "    features = normalised_set[selected_names]\n",
-    "    labels = normalised_set[['target_in_site_stdevs']]\n",
+    "    features = _set[selected_names]\n",
+    "    _labels = _set[['target']]\n",
     "\n",
-    "    scores.append(model.score(features, labels))\n",
+    "    scores.append(model.score(features, _labels))\n",
     "\n",
-    "scores"
+    "np.mean(scores)"
    ]
   }
  ],
